Fix chart spacing

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -51,7 +51,11 @@ h2 {
 
 .wideChart {
 	display:block;
-	width: 1000px;
+
+	svg {
+		width: 1000px;
+		height: 150px;
+	}
 }
 
 .stackChart svg {
